# context6

./: README.md  pyproject.toml  qrels.json
context6/: cli.py
context6/core/: codex_summarizer.py  eval.py  indexer.py  ollama_summarizer.py  present.py  retrieve.py  summarize.py  summarize_router.py
context6/db/: sqlite.py
context6/mcp/: context6_server.py  test_client.py
tests/: test_code_truncated_column.py  test_db_and_retrieve.py  test_eval_recall.py  test_indexer.py  test_ollama_summarizer.py  test_present.py  test_resolve.py
